# cap-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_CHATBOT.md  learning_curve.csv  pyproject.toml  pytest.ini  requirements.txt
configuration/: README.md
docs/: agent_mode.md  chatbot_frontend.md  cli.md  cognitive_linguistics.md  data_bundle.md  index.md  provider_args.md  research.md  scheduling.md  ui_proposal.md  user_manual.md
reports/: index.html
research/: idea_prompts.py  optimize.py  sandbox.py  search_space.py  tracking.py
scripts/: demo_python_function.py  demo_research_url.py  demo_search_read_memory_code.py  e2e_test.sh  run_ui.py  smoke_fetch.bat  smoke_test.sh
sentimental_cap_predictor/sentimental_cap_predictor/: Makefile  analyze_batch.py  environment.yml  pyproject.toml  trader.py
sentimental_cap_predictor/sentimental_cap_predictor/models/Model 1/: lnn.py  stochastic_grid_search.py
sentimental_cap_predictor/sentimental_cap_predictor/models/Model 2/: dataset.py  features.py  features_backup.py  plots.py  post_processing.py  preprocessing.py  random_walker.py  sarima_calculator.py  test_sarima.py
sentimental_cap_predictor/sentimental_cap_predictor/sentimental_cap_predictor/: config.py  features_backup.py  plots.py  plots_backup.py  test_covariance.py
sentimental_cap_predictor/sentimental_cap_predictor/sentimental_cap_predictor/modeling/: time_series_deep_learner.py
sentimental_cap_predictor/sentimental_cap_predictor/sentimental_cap_predictor/modeling/your_processed_dir_path/: AAPL_final_predictions.csv
sentimental_cap_predictor/sentimental_cap_predictor/sentimental_cap_predictor/old_code/: Jump.py  lnn.py  lnn_grouping.py  markov_chain_generator.py  postprocessing.py  random_walker.py  sarima_calculator.py  test_bias_predctions.py  test_lnn.py
tests/: conftest.py  test_agent_dispatcher.py  test_agent_loop_memory.py  test_agent_opt_in.py  test_agent_sandbox.py  test_article_reader.py  test_backtester.py  test_chatbot.py  test_chatbot_frontend.py  test_chatbot_lookup.py  test_chatbot_news.py  test_chatbot_nlu_pipeline.py  test_chatbot_nlu_tickers.py  test_chatbot_pipeline.py  test_ingest.py  (+45 more)
(+201 files in other folders)
