[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cap-predictor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "typer",
    "yfinance",
    "requests",
    "newspaper3k",
    "transformers",
    "tensorflow",
    "python-dotenv",
    "loguru",
    "scikit-learn",
    "statsmodels",
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
