[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cap-predictor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<3",
    "numpy>=1.25,<2",
    "typer>=0.9,<1",
    "yfinance>=0.2,<1",
    "requests>=2.31,<3",
    "newspaper3k>=0.2,<0.3",
    "transformers>=4.30,<5",
    "torch==2.2.2",
    "pydantic==2.11.7",
    "prefect==3.4.13",
    "python-dotenv>=1.0,<2",
    "loguru>=0.7,<0.8",
    "scikit-learn>=1.3,<2",
    "statsmodels>=0.14,<1",
    "mlflow>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "ruff>=0.1.5,<0.2",
    "pre-commit>=3.5,<4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
