[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sentimental_cap_predictor"
version = "0.0.1"
description = "Try and predict stock values using ARIMA/sentiment analysis/LNN interactions."
authors = [
  { name = "Philip McLaughlin" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99
# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C901"]
ignore = ["E731"]

[tool.ruff.format]
# formatter settings here